chamber site stuff added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li>Week 06: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
             </ul>
         </section>
-        <section>
+        <section class ="card">
             <h3>Information</h3>
                 <p>Location</p>
                 <p>Weather</p>
