--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="https://skyguytheflyguy.github.io/wdd230/index.html">Home</a></li>
             <li><a href="#">Chamber</a></li>
             <li><a href="https://skyguytheflyguy.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="#">Form</a></li>
@@ -28,7 +28,7 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li>Week 01: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
+                <li>Week 01: <a href="https://skyguytheflyguy.github.io/wdd230/week02/design.html">Design Principles</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 02: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 03: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 04: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
