--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li>Week 01: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
-                <li>Week 02: <a href="https://skyguytheflyguy.github.io/wdd230/week02/design.html">Design Principles</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
+                <li>Week 02: <a href="https://skyguytheflyguy.github.io/wdd230/week02/design.html">Design Principles</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week02/hamburger.html">Hamburger</a> | <a href="#">JS Pen</a></li>
                 <li>Week 03: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 04: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 05: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
