--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:type" content="homepage" />
     <meta property="og:image" content="https://skyguytheflyguy.github.io/wdd230/images/profile-pic.png" />
     <meta property="og:url" content="https://skyguytheflyguy.github.io/wdd230/index.html" />
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
