--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Skyler Tower - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development - Skyler Tower - Course Assignment Portal">
     <meta name="author" content="Skyler Tower">
-    <meta property="og:title" content="WDD 230: Web Frontend Development Homepage"/>
-    <meta property="og:type" content="homepage"/>
-    <meta property="og:image" content="https://skyguytheflyguy.github.io/wdd230/images/profile-pic.png"/>
-    <meta property="og:url" content="https://skyguytheflyguy.github.io/wdd230/index.html"/>
+    <meta property="og:title" content="WDD 230: Web Frontend Development Homepage">
+    <meta property="og:type" content="homepage">
+    <meta property="og:image" content="https://skyguytheflyguy.github.io/wdd230/images/profile-pic.png">
+    <meta property="og:url" content="https://skyguytheflyguy.github.io/wdd230/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
