--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
     
 </head>
 <body>
+    
     <header>
         <img src="images/profile-pic.png" alt="Picture of me">
         <h1>Skyler Tower</h1>
+        <div id="mode">
+            🕶️
+        </div>
     </header>
     <nav>
         <ul>
