made hamburger work

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </div>
     </header>
     <nav>
-        <ul>
+        <button id="menu"></button>
+        <ul class="navigation">
             <li><a href="https://skyguytheflyguy.github.io/wdd230/index.html">Home</a></li>
             <li><a href="#">Chamber</a></li>
             <li><a href="https://skyguytheflyguy.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
