--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -3,7 +3,10 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Plan</title>
+    <meta name="description" content="WDD 230 - Web Frontend Development - Skyler Tower - Chamber Plan">
+    <meta name="author" content="Skyler Tower">
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
   </head>
 
@@ -36,7 +39,7 @@
       </h2>
 
       <h3>
-        Color Palette
+        Color Schema
       </h3>
       <p>Palette URL: <a href="https://coolors.co/46351d-646f4b-7bb2d9-bfd2bf" target="_blank">https://coolors.co/46351d-646f4b-7bb2d9-bfd2bf</a></p>
 
