--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,6 +16,18 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <nav>
+
+    </nav>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+    <script src="scripts/scripts.js"></script>
 </body>
 </html>
