--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-
+        <h1>Idaho Falls Chamber of Commerce</h1>
     </header>
     <nav>
 
@@ -26,7 +26,10 @@
 
     </main>
     <footer>
-
+        <p>&copy; <span id="year"></span> Skyler Tower</p>
+        <p>For WDD 230 Fall Semester</p>
+        <p>Last Modification: <p id="lastModified"></p></p>
+        <p>Contact Me: skylertower@yahoo.com</p>
     </footer>
     <script src="scripts/scripts.js"></script>
 </body>
