--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     </main>
     <footer>
         <p>&copy; <span id="year"></span> Skyler Tower | USA</p>
+        <p>For WDD 230 Fall Semester</p>
         <p>Last Modification: </p><p id="lastModified"></p>
+        <p>Contact Me: skylertower@yahoo.com</p>
     </footer>
     <script src="scripts/getDates.js"></script>
 </body>
