--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,7 +28,7 @@
     <footer>
         <p>&copy; <span id="year"></span> Skyler Tower</p>
         <p>For WDD 230 Fall Semester</p>
-        <p>Last Modification: <p id="lastModified"></p></p>
+        <p>Last Modification: </p><p id="lastModified"></p>
         <p>Contact Me: skylertower@yahoo.com</p>
     </footer>
     <script src="scripts/scripts.js"></script>
