--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,10 +20,29 @@
         <h1>Idaho Falls Chamber of Commerce</h1>
     </header>
     <nav>
-
+        <button id="menu"></button>
+        <ul class="navigation">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Nav</a></li>
+            <li><a href="#">Nav</a></li>
+            <li><a href="#">Nav</a></li>
+        </ul>
     </nav>
     <main>
-
+        <img src="images/chamber-cover.png" alt="cover picture">
+        <div>
+            Call To Action
+        </div>
+        <section class="card">
+            <h3>Events</h3>
+            <ul>
+                <li>Events</li>
+            </ul>
+        </section>
+        <section class ="card">
+            <h3>Weather</h3>
+                <p>Weather</p>
+        </section>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> Skyler Tower</p>
