--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button id="menu"></button>
         <ul class="navigation">
             <li><a href="https://skyguytheflyguy.github.io/wdd230/index.html">Home</a></li>
-            <li><a href="#">Chamber</a></li>
+            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/index.html">Chamber</a></li>
             <li><a href="https://skyguytheflyguy.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="#">Form</a></li>
         </ul>
