--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <ul>
                 <li>Week 01: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 02: <a href="https://skyguytheflyguy.github.io/wdd230/week02/design.html">Design Principles</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week02/hamburger.html">Hamburger</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week02/bom.html">DOM Manip</a></li>
-                <li>Week 03: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
+                <li>Week 03: <a href="https://skyguytheflyguy.github.io/wdd230/week03/images/landscape.webp">WebP</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 04: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 05: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 06: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
