--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
 <body>
      <header>
-        <img src="images/profile-pic.png" alt="Picture of me">
+        <img src="images/profile-pic.webp" alt="Picture of me">
         <h1>Skyler Tower</h1>
         <div id="mode">
             🕶️
@@ -33,13 +33,23 @@
         </ul>
     </nav>
     <main>
+        <div class="hero">
+            <picture>
+                <source media="(max-width: 400px)" srcset="images/hero-small.webp">
+                <source media="(max-width: 960px)" srcset="images/hero-medium.webp">
+                <img src="images/hero-large.webp" alt="logan temple" width="1500" height="750">
+            </picture>
+            <div class="herolabel">
+                <p>Logan Utah Temple</p>
+            </div>
+        </div>
         <h2><u>WDD 230: Web Frontend Development</u></h2>
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
                 <li>Week 01: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 02: <a href="https://skyguytheflyguy.github.io/wdd230/week02/design.html">Design Principles</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week02/hamburger.html">Hamburger</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week02/bom.html">DOM Manip</a></li>
-                <li>Week 03: <a href="https://skyguytheflyguy.github.io/wdd230/week03/images/landscape.webp">WebP</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/lazyload.html">Lazy Load</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/responsive-images.html">Responsive Images</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/bom.html">BOM Local Storage</a></li>
+                <li>Week 03: <a href="https://skyguytheflyguy.github.io/wdd230/week03/images/landscape.webp">WebP</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/lazyload.html">Lazy Load</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/responsive-images.html">Responsive Images</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/bom.html">BOM Local</a></li>
                 <li>Week 04: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 05: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
                 <li>Week 06: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
@@ -49,8 +59,9 @@
             <h3>Information</h3>
                 <p>Location</p>
                 <p>Weather</p>
-                <p>Page Visits</p>
+                <p>Page Visits: <span class="visits"></span></p>
         </section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6572.463986820672!2d-112.07250814218992!3d43.48950791745899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1700159531509!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> Skyler Tower | USA</p>
@@ -58,6 +69,6 @@
         <p>Last Modification: </p><p id="lastModified"></p>
         <p>Contact Me: skylertower@yahoo.com</p>
     </footer>
-    <script src="scripts/getDates.js"></script>
+    <script src="scripts/scripts.js"></script>
 </body>
 </html>
