--- a/chamber/index.html
+++ b/chamber/index.html
@@ -43,6 +43,17 @@
             <h3>Weather</h3>
                 <p>Weather</p>
         </section>
+        <h2>Company Spotlights</h2>
+        <section class ="card">
+            <h3>Plum Inc</h3>
+                <p>"We Make Paint!</p>
+                <p>Call now to get a free quote</p>
+        </section>
+        <section class ="card">
+            <h3>Tiger Lily LLC</h3>
+                <p>Private Investigators</p>
+                <p>"We will make sure you are the only tiger of his eye."</p>
+        </section>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> Skyler Tower</p>
