added some stuff

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skyler Tower - WDD 230 - Web Frontend Development</title>
-    <meta name="description" content="WDD 230 - Web Frontend Development - Skyler Tower - Course Assignment Portal">
+    <title>Chamber of Commerce Discover Page</title>
+    <meta name="description" content="WDD 230 - Web Frontend Development - Skyler Tower - Chamber of Commerce Discover Page">
     <meta name="author" content="Skyler Tower">
     <meta property="og:title" content="WDD 230: Web Frontend Development Homepage">
     <meta property="og:type" content="website">
@@ -17,11 +17,7 @@
     </head>
 <body>
      <header>
-        <img src="images/profile-pic.webp" alt="Picture of me">
-        <h1>Skyler Tower</h1>
-        <div id="mode">
-            🕶️
-        </div>
+        <h1>Discover Page</h1>
     </header>
     <nav>
         <button id="menu"></button>
