--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -17,7 +17,7 @@
     </head>
 <body>
      <header>
-        <h1>Discover Page</h1>
+        <h1>Discover - Chamber of Commerce</h1>
     </header>
     <nav>
         <button id="menu"></button>
