--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -17,7 +17,7 @@
     </head>
 <body>
      <header>
-        <h1>Discover - Chamber of Commerce</h1>
+        <h1>Discover Page</h1>
     </header>
     <nav>
         <button id="menu"></button>
@@ -32,7 +32,7 @@
         <div class="wrapper">
             <header>Header</header>
             <article>
-              <h1>Welcome</h1>
+              <h2>Welcome</h2>
               <p>Hi!</p>
             </article> 
             <aside><ul><li>Sidebar</li></ul></aside>
