added to chamber

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -32,10 +32,51 @@
         <div class="wrapper">
             <header>Header</header>
             <article>
-              <h2>Welcome</h2>
-              <p>Hi!</p>
+                <section class ="card">
+                    <img src="images/downtown.webp" alt="downtown" loading="lazy" class="center">
+                </section>
+                <section class ="card">
+                    <img src="images/fountain.webp" alt="downtown" loading="lazy" class="center">
+                </section>
+                <section class ="card">
+                    <img src="images/freeman-park.webp" alt="downtown" loading="lazy" class="center">
+                </section>
+                <section class ="card">
+                    <img src="images/mall.webp" alt="downtown" loading="lazy" class="center">
+                </section>
+                <section class ="card">
+                    <img src="images/temple.webp" alt="downtown" loading="lazy" class="center">
+                </section>
+                <section class ="card">
+                    <img src="images/water-tower.webp" alt="downtown" loading="lazy" class="center">
+                </section>
             </article> 
-            <aside><ul><li>Sidebar</li></ul></aside>
+            <aside>
+                <section class ="card">
+                    <h3>Weather</h3>
+                    <p>Weather</p>
+                </section>
+                <section class ="card">
+                    <h3>Weather</h3>
+                    <p>Weather</p>
+                </section>
+                <section class ="card">
+                    <h3>Weather</h3>
+                    <p>Weather</p>
+                </section>
+                <section class ="card">
+                    <h3>Weather</h3>
+                    <p>Weather</p>
+                </section>
+                <section class ="card">
+                    <h3>Weather</h3>
+                    <p>Weather</p>
+                </section>
+                <section class ="card">
+                    <h3>Weather</h3>
+                    <p>Weather</p>
+                </section>
+            </aside>
             <footer>Footer</footer>
           </div>
     </main>
