added to chamber

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -30,7 +30,9 @@
     </nav>
     <main>
         <div class="wrapper">
-            <header>Header</header>
+            <header>
+                <h2>Things to Know about Idaho Falls</h2>
+            </header>
             <article>
                 <section class ="card">
                     <img src="images/downtown.webp" alt="downtown" loading="lazy" class="center">
@@ -53,31 +55,29 @@
             </article> 
             <aside>
                 <section class ="card">
-                    <h3>Weather</h3>
-                    <p>Weather</p>
+                    <h3>Population Info</h3>
+                    <p>Idaho Falls is a city located in Bonneville County Idaho.<br><br>Idaho Falls has a 2023 population of 69,450.<br><br>It is also the county seat of Bonneville County.<br><br>Idaho Falls is currently growing at a rate of 1.89% annually and its population has increased by 5.78% since the most recent census, which recorded a population of 65,657 in 2020.</p>
                 </section>
                 <section class ="card">
-                    <h3>Weather</h3>
-                    <p>Weather</p>
+                    <h3>Idaho Falls Demographics</h3>
+                    <p>According to the most recent ACS, the racial composition of Idaho Falls was:<br><br><br>
+                        White: 85.05%<br><br>
+                        Other race: 6.84%<br><br>
+                        Two or more races: 5.45%<br><br>
+                        Asian: 0.99%<br><br>
+                        Native American: 0.79%<br><br>
+                        Black or African American: 0.63%<br><br>
+                        Native Hawaiian or Pacific Islander: 0.25%</p>
                 </section>
                 <section class ="card">
-                    <h3>Weather</h3>
-                    <p>Weather</p>
-                </section>
-                <section class ="card">
-                    <h3>Weather</h3>
-                    <p>Weather</p>
-                </section>
-                <section class ="card">
-                    <h3>Weather</h3>
-                    <p>Weather</p>
-                </section>
-                <section class ="card">
-                    <h3>Weather</h3>
-                    <p>Weather</p>
+                    <h3>Fun Facts</h3>
+                    <p>The town that emerged at this site was initially named Eagle Rock, after the rock island in the river.<br><br>
+                    The town became Idaho Falls in 1891. The city was named after the rapids that were present below the bridge.<br><br>
+                    The fourth Mormon temple outside of Utah was built in Idaho Falls.<br><br>
+                    The area around Idaho Falls was first sparsely settled by cattle and sheep ranchers.</p>
                 </section>
             </aside>
-            <footer>Footer</footer>
+            <footer>Page Visits: <span class="visits"></span></footer>
           </div>
     </main>
     <footer>
