--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,10 +22,10 @@
     <nav>
         <button id="menu"></button>
         <ul class="navigation">
-            <li><a href="https://skyguytheflyguy.github.io/wdd230/index.html">Home</a></li>
-            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/index.html">Chamber</a></li>
-            <li><a href="https://skyguytheflyguy.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="#">Form</a></li>
+            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/index.html">Home</a></li>
+            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/discover.html">Discover</a></li>
+            <li><a href="#">Nav</a></li>
+            <li><a href="#">Nav</a></li>
         </ul>
     </nav>
     <main>
