--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,8 +22,8 @@
     <nav>
         <button id="menu"></button>
         <ul class="navigation">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Nav</a></li>
+            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/index.html">Home</a></li>
+            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/discover.html">Discover</a></li>
             <li><a href="#">Nav</a></li>
             <li><a href="#">Nav</a></li>
         </ul>
