--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,23 +34,30 @@
                 <h2>Things to Know about Idaho Falls</h2>
             </header>
             <article>
+                <h2>Locations around Idaho Falls</h2>
                 <section class ="card">
+                    <h3>Downtown Idaho Falls</h3>
                     <img src="images/downtown.webp" alt="downtown" loading="lazy" class="center">
                 </section>
                 <section class ="card">
-                    <img src="images/fountain.webp" alt="downtown" loading="lazy" class="center">
+                    <h3>Idaho Falls Fountain</h3>
+                    <img src="images/fountain.webp" alt="fountain" loading="lazy" class="center">
                 </section>
                 <section class ="card">
-                    <img src="images/freeman-park.webp" alt="downtown" loading="lazy" class="center">
+                    <h3>Freeman Park in Idaho Falls</h3>
+                    <img src="images/freeman-park.webp" alt="freeman park" loading="lazy" class="center">
                 </section>
                 <section class ="card">
-                    <img src="images/mall.webp" alt="downtown" loading="lazy" class="center">
+                    <h3>Grand Teton Mall</h3>
+                    <img src="images/mall.webp" alt="mall" loading="lazy" class="center">
                 </section>
                 <section class ="card">
-                    <img src="images/temple.webp" alt="downtown" loading="lazy" class="center">
+                    <h3>Idaho Falls Temple</h3>
+                    <img src="images/temple.webp" alt="temple" loading="lazy" class="center">
                 </section>
                 <section class ="card">
-                    <img src="images/water-tower.webp" alt="downtown" loading="lazy" class="center">
+                    <h3>Idaho Falls Water Tower</h3>
+                    <img src="images/water-tower.webp" alt="water tower" loading="lazy" class="center">
                 </section>
             </article> 
             <aside>
