--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="https://skyguytheflyguy.github.io/wdd230/index.html">Home</a></li>
             <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/index.html">Chamber</a></li>
             <li><a href="https://skyguytheflyguy.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="#">Form</a></li>
+            <li><a href="https://skyguytheflyguy.github.io/wdd230/form.html">Form</a></li>
         </ul>
     </nav>
     <main>
