--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
-    <meta name="description" content="WDD 230 - Web Frontend Development - Skyler Tower - Course Assignment Portal">
+    <meta name="description" content="WDD 230 - Form Assignment">
     <meta name="author" content="Skyler Tower">
     <meta property="og:title" content="WDD 230: Web Frontend Development Homepage">
     <meta property="og:type" content="website">
