added join button to chamber home

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,7 +24,7 @@
         <ul class="navigation">
             <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/index.html">Home</a></li>
             <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/discover.html">Discover</a></li>
-            <li><a href="#">Nav</a></li>
+            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/join.html">Join Now!</a></li>
             <li><a href="#">Nav</a></li>
         </ul>
     </nav>
