--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li>Week 02: <a href="https://skyguytheflyguy.github.io/wdd230/week02/design.html">Design Principles</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week02/hamburger.html">Hamburger</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week02/bom.html">DOM Manip</a></li>
                 <li>Week 03: <a href="https://skyguytheflyguy.github.io/wdd230/week03/images/landscape.webp">WebP</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/lazyload.html">Lazy Load</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/responsive-images.html">Responsive Images</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/bom.html">BOM Local</a></li>
                 <li>Week 04: <a href="https://skyguytheflyguy.github.io/wdd230/week04/pseudo-classes.html">Pseudo Classes</a> | <a href="week04/images/exercises.PNG">Exercises</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week04/tablebuild.html">Tables</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week04/index.html">Form</a></li>
-                <li>Week 05: <a href="https://skyguytheflyguy.github.io/wdd230/week05/pseudo-elements.html">Pseudo Elements</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
+                <li>Week 05: <a href="https://skyguytheflyguy.github.io/wdd230/week05/pseudo-elements.html">Pseudo Elements</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week05/new-ward-members.json">JSON</a> | <a href="#">JS Pen</a></li>
                 <li>Week 06: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
             </ul>
         </section>
