--- a/index.html
+++ b/index.html
@@ -47,18 +47,17 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li>Week 01: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
-                <li>Week 02: <a href="https://skyguytheflyguy.github.io/wdd230/week02/design.html">Design Principles</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week02/hamburger.html">Hamburger</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week02/bom.html">DOM Manip</a></li>
-                <li>Week 03: <a href="https://skyguytheflyguy.github.io/wdd230/week03/images/landscape.webp">WebP</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/lazyload.html">Lazy Load</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/responsive-images.html">Responsive Images</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week03/bom.html">BOM Local</a></li>
-                <li>Week 04: <a href="https://skyguytheflyguy.github.io/wdd230/week04/pseudo-classes.html">Pseudo Classes</a> | <a href="week04/images/exercises.PNG">Exercises</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week04/tablebuild.html">Tables</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week04/index.html">Form</a></li>
-                <li>Week 05: <a href="https://skyguytheflyguy.github.io/wdd230/week05/pseudo-elements.html">Pseudo Elements</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week05/new-ward-members.json">JSON</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week05/prophets.html">Prophets</a> | <a href="https://skyguytheflyguy.github.io/wdd230/week05/weather.html">Weather</a></li>
+                <li>Week 01: <a href="week01/holygrail.html">Holy Grail</a> | <a href="week01/media-query.html">Media Query</a>
+                <li>Week 02: <a href="week02/design.html">Design Principles</a> | <a href="week02/hamburger.html">Hamburger</a> | <a href="week02/bom.html">DOM Manip</a></li>
+                <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="week03/lazyload.html">Lazy Load</a> | <a href="week03/responsive-images.html">Responsive Images</a> | <a href="week03/bom.html">BOM Local</a></li>
+                <li>Week 04: <a href="week04/pseudo-classes.html">Pseudo Classes</a> | <a href="week04/images/exercises.PNG">Exercises</a> | <a href="week04/tablebuild.html">Tables</a> | <a href="week04/index.html">Form</a></li>
+                <li>Week 05: <a href="week05/pseudo-elements.html">Pseudo Elements</a> | <a href="week05/new-ward-members.json">JSON</a> | <a href="week05/prophets.html">Prophets</a> | <a href="week05/weather.html">Weather</a></li>
                 <li>Week 06: <a href="#">Layout</a> | <a href="#">Media Query</a> | <a href="#">JS Pen</a></li>
             </ul>
         </section>
         <section class ="card">
             <h3>Information</h3>
-                <p>Location</p>
-                <p>Weather</p>
+                <p><img id="weather-icon" src="" alt=""> <span id="current-temp"></span> - <figcaption></figcaption></p>
                 <p>Page Visits: <span class="visits"></span></p>
         </section>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6572.463986820672!2d-112.07250814218992!3d43.48950791745899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1700159531509!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
