--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <nav>
         <button id="menu"></button>
         <ul class="navigation">
-            <li><a href="https://skyguytheflyguy.github.io/wdd230/index.html">Home</a></li>
-            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/index.html">Chamber</a></li>
-            <li><a href="https://skyguytheflyguy.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="https://skyguytheflyguy.github.io/wdd230/form.html">Form</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="chamber/index.html">Chamber</a></li>
+            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="form.html">Form</a></li>
         </ul>
     </nav>
     <main>
