--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
         <p>Contact Me: skylertower@yahoo.com</p>
     </footer>
     <script src="scripts/scripts.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 </html>
