did what I could

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2><u>WDD 230: Web Frontend Development</u></h2>
         <section class="card">
             <h3>Learning Activities</h3>
-            <ul>
+            <ul id="links">
                 <li>Week 01: <a href="week01/holygrail.html">Holy Grail</a> | <a href="week01/media-query.html">Media Query</a>
                 <li>Week 02: <a href="week02/design.html">Design Principles</a> | <a href="week02/hamburger.html">Hamburger</a> | <a href="week02/bom.html">DOM Manip</a></li>
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="week03/lazyload.html">Lazy Load</a> | <a href="week03/responsive-images.html">Responsive Images</a> | <a href="week03/bom.html">BOM Local</a></li>
