added directory stuff

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img class="cover" src="images/chamber-cover.png" alt="Picture of me">
+        <img class="cover" src="images/chamber-cover.png" alt="cover picture">
         <h1>Directory Page</h1>
     </header>
     <nav>
@@ -24,8 +24,8 @@
     </nav>
     <main>
         <div class="menu2">
-            <button id="grid">⏹️Grid</button>
-            <button id="list">📄List</button>
+            <button id="grid">⏹️ Grid</button>
+            <button id="list">📄 List</button>
         </div>
         <hr>
         <article class="grid">
@@ -77,13 +77,6 @@
                 <h3>Provo Utah</h3>
                 <p>1972</p>
                 <a href="https://www.churchofjesuschrist.org/temples/details/provo-utah-temple?lang=eng" target="_blank">Details</a>
-            </section>
-    
-            <section>
-                <img src="https://assets.ldscdn.org/57/18/5718c8b9c5a103646c0bd22554cb268b88986f05/provo_city_center_temple_exterior.jpg" alt="Provo City Center Temple" />
-                <h3>Provo City Center</h3>
-                <p>2016</p>
-                <a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank">Details</a>
             </section>
         </article>
     </main>
