--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,10 +22,10 @@
     <nav>
         <button id="menu"></button>
         <ul class="navigation">
-            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/index.html">Home</a></li>
-            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/discover.html">Discover</a></li>
-            <li><a href="https://skyguytheflyguy.github.io/wdd230/chamber/join.html">Join Now!</a></li>
-            <li><a href="#">Nav</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="discover.html">Discover</a></li>
+            <li><a href="join.html">Join Now!</a></li>
+            <li><a href="directory.html">Directory</a></li>
         </ul>
     </nav>
     <main>
