--- a/testpage/index.html
+++ b/testpage/index.html
@@ -11,6 +11,6 @@
         <!-- <link>Company information</link> will be inserted here -->
     </div>
 
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
