--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chamber of Commerce Directory</title>
+    <meta name="description" content="Chamber of Commerce Directory">
+    <meta name="author" content="Skyler Tower">
+    <meta property="og:title" content="Idaho Falls Chamber of Commerce">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://skyguytheflyguy.github.io/wdd230/chamber/images/chamber-cover.png">
+    <meta property="og:url" content="https://skyguytheflyguy.github.io/wdd230/chamber/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
