--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,7 +41,8 @@
         </section>
         <section class ="card">
             <h3>Weather</h3>
-                <p>Weather</p>
+            <p><img id="weather-icon" src="" alt=""> <span id="current-temp"></span> - <figcaption></figcaption></p>
+            
         </section>
         <h2>Company Spotlights</h2>
         <section class ="card">
